--- a/public/bubble.html
+++ b/public/bubble.html
@@ -119,9 +119,6 @@
     <script src="/assets/js/PGChartPoint.js"></script>
     <script src="/assets/js/PGChart.js"></script>
     <script src="/assets/js/PGBubblesChart.js"></script>
-    <script src="/assets/js/PGBubblesChartOld.js"></script>
-    <script src="/assets/js/bubble_pre.js"></script>
-    <!--script src="/assets/js/bubble.js"></script-->
-
+    <script src="/assets/js/bubbles.js"></script>
   </body>
   </html>
