--- a/public/displaydataset.html
+++ b/public/displaydataset.html
@@ -72,7 +72,8 @@
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Add To Home &raquo;</a>
         </p> -->
               <a id="BubbleLink" href="#">View as Bubble chart</a>
-
+          
+          <div id='modes' class="btn-group row"></div>
 
           <div class="row">
             Override X Axis:
@@ -133,7 +134,8 @@
     <script src="/assets/js/PGChartPointView.js"></script>
     <script src="/assets/js/PGChart.js"></script>
     <script src="/assets/js/PGLinesChart.js"></script>
-    <script src="/assets/js/PGPanChart.js"></script>    
+    <script src="/assets/js/PGAreasChart.js"></script>    
+    <script src="/assets/js/PGBarsChart.js"></script> 
     <script src="/assets/js/view.js"></script>
 
   </body>
