Change wording on the front page

--- a/public/index.html
+++ b/public/index.html
@@ -57,8 +57,10 @@
     <div class="jumbotron">
       <div class="container">      
         <h1>Welcome back <font id="FillInUserName">...</font></h1>
-        <p>It looks pretty lonley here!</p>
-        <p>Why don't you go and add some data that you are interseted in?</p>
+        <div id="History">
+          <p>It looks pretty lonley here!</p>
+          <p>Why don't you go and view some data that you are interseted in?</p>
+        </div>
         <p>
           <a class="btn btn-lg btn-primary" href="search.html" role="button">Search Data &raquo;</a>
         </p>
