starting tree map

--- a/public/displaydataset.html
+++ b/public/displaydataset.html
@@ -150,6 +150,7 @@
 <script src="/assets/js/PGBarsChart.js"></script> 
 <script src="/assets/js/PGPieChart.js"></script>
 <script src="/assets/js/PGBubblesChart.js"></script>
+<script src="/assets/js/PGEnclosureChart.js"></script>
 <script src="/assets/js/view.js"></script>
     
 </body>
