Oh and the other files as well

--- a/public/index.html
+++ b/public/index.html
@@ -56,7 +56,7 @@
 
     <div class="jumbotron">
       <div class="container">      
-        <h1>Welcome back <font id="FillInUserName">...</font></h1>
+        <h1>Welcome back {{.}}</h1>
         <div id="History">
           <p>It looks pretty lonley here!</p>
           <p>Why don't you go and view some data that you are interseted in?</p>
