url-based fields / starting overview charts

--- a/public/displaydataset.html
+++ b/public/displaydataset.html
@@ -9,7 +9,7 @@
   <meta name="author" content="">
   <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
 
-  <title>DataCon - Home</title>
+  <title>DataCon - Charts</title>
 
   <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
   <link href="/assets/css/layout.min.css" rel="stylesheet">
@@ -152,13 +152,14 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="/assets/js/lib/jquery-1.10.2.min.js"></script>    
-<script src="/assets/js/lib/d3.v3.min.js" charset="utf-8"></script>
+<script src="/assets/js/lib/jquery.min.js"></script>    
+<script src="/assets/js/lib/d3.min.js" charset="utf-8"></script>
 <script src="/assets/js/lib/bootstrap.min.js"></script>
 <script src="/assets/js/lib/underscore.min.js"></script>
 <script src="/assets/js/lib/backbone.min.js"></script>
 
 <script src="/assets/js/common.js"></script>
+
 <script src="/assets/js/PGChartPoint.js"></script>
 <script src="/assets/js/PGChartPointView.js"></script>
 <script src="/assets/js/PGChart.js"></script>
@@ -170,6 +171,7 @@
 <script src="/assets/js/PGEnclosureChart.js"></script>
 <script src="/assets/js/PGTreeChart.js"></script>
 <script src="/assets/js/PGTreemapChart.js"></script>
+
 <script src="/assets/js/view.js"></script>
     
 </body>
