--- a/public/bookmarked.html
+++ b/public/bookmarked.html
@@ -14,7 +14,7 @@
   <!-- Bootstrap core CSS -->
   <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
   <link href="/assets/css/layout.min.css" rel="stylesheet">
-  <link href="/assets/css/graphs.min.css" rel="stylesheet">
+  <link href="/assets/css/charts.min.css" rel="stylesheet">
   <!--link href="/assets/css/xcharts.css" rel="stylesheet"-->
 
   <!-- Custom styles for this template -->
@@ -102,8 +102,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/lib/jquery-1.10.2.min.js"></script>    
-    <script src="/assets/js/lib/d3.v3.min.js" charset="utf-8"></script>
+    <script src="/assets/js/lib/jquery.min.js"></script>    
+    <script src="/assets/js/lib/d3.min.js" charset="utf-8"></script>
     <script src="/assets/js/lib/bootstrap.min.js"></script>
     <script src="/assets/js/lib/underscore.min.js"></script>
     <script src="/assets/js/lib/backbone.min.js"></script>
