--- a/public/grid.html
+++ b/public/grid.html
@@ -68,8 +68,8 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/lib/jquery-1.10.2.min.js"></script>    
-    <script src="/assets/js/lib/d3.v3.min.js" charset="utf-8"></script>
+    <script src="/assets/js/lib/jquery.min.js"></script>    
+    <script src="/assets/js/lib/d3.min.js" charset="utf-8"></script>
     <script src="/assets/js/lib/bootstrap.min.js"></script>
     <script src="/assets/js/lib/underscore.min.js"></script>
     <script src="/assets/js/lib/backbone.min.js"></script>
