--- a/public/maps.html
+++ b/public/maps.html
@@ -79,7 +79,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/lib/jquery-1.10.2.min.js"></script>
+    <script src="/assets/js/lib/jquery.min.js"></script>
     <script src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
     <script src="/assets/js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtGeKRpMVbjE1LBLnA6y4TZat4D7H-GCw&sensor=false&libraries=visualization"></script>
