--- a/public/search.html
+++ b/public/search.html
@@ -68,7 +68,7 @@
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/lib/jquery-1.10.2.min.js"></script>
+    <script src="/assets/js/lib/jquery.min.js"></script>
     <script src="/assets/js/lib/bootstrap.min.js"></script>
     <script src="/assets/js/search.js"></script>
   </body>
