starting pattern matching

--- a/public/displaydataset.html
+++ b/public/displaydataset.html
@@ -160,6 +160,8 @@
 
 <script src="/assets/js/common.js"></script>
 
+<script src="/assets/js/PatternMatcher.js"></script>
+
 <script src="/assets/js/PGChartPoint.js"></script>
 <script src="/assets/js/PGChartPointView.js"></script>
 <script src="/assets/js/PGChart.js"></script>
