everything re-structured

--- a/public/signin.html
+++ b/public/signin.html
@@ -1,43 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="The Signin page to DataCon">
-    <meta name="author" content="Playgen">
-
-    <title>Signin</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/layout.min.css" rel="stylesheet">
-
-    <!-- Custom styles for this template -->
-    <link href="assets/css/signin.css" rel="stylesheet">
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.assets/js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+    {{.Header}}
+    <link href="/css/signin.css" rel="stylesheet">
   </head>
-
   <body>
-
-    <div class="container">
-      <form class="form-signin" action="/noauth/login.json" method="POST" >
-        <h2 class="form-signin-heading">DataCon - Please sign in</h2>
-        <font color="#FF0000">{{.}}</font>
-        <input name="username" type="text" class="form-control" placeholder="Email address" required autofocus>
-        <input name="password" type="password" class="form-control" placeholder="Password" required>
-        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-      </form>
-    </div> <!-- /container -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
+    {{.Navbar}}
+    <div class="jumbotron">
+      <div class="container">
+        <form class="form-signin" action="/noauth/login.json" method="POST" >
+          <h2 class="form-signin-heading">DataCon - Please sign in</h2>
+          <font color="#FF0000">{{.Custom.fail}}</font>
+          <input name="username" type="text" class="form-control" placeholder="Email address" required autofocus>
+          <input name="password" type="password" class="form-control" placeholder="Password" required>
+          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+        </form>
+      </div> <!-- /container -->
+    </div> <!-- /jumbotron -->
+    {{.Footer}}
   </body>
 </html>
