--- a/public/grid.html
+++ b/public/grid.html
@@ -1,83 +1,24 @@
 
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
+<head>
+  {{.Header}}
+  <link href="/css/charts.css" rel="stylesheet">
+</head>
 
-    <title>DataCon - Grid View</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/layout.min.css" rel="stylesheet">
-    <link href="/assets/css/charts.min.css" rel="stylesheet">
-
-
-    <!-- Custom styles for this template -->
-    <!-- <link href="navbar-fixed-top.css" rel="stylesheet">-->
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.assets/js/1.3.0/respond.min.js"></script>
-    <![endif]-->
-  </head>
-
-  <body>
-
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">DataCon</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a class="online" href="#">Online</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
-    <div class="jumbotron">
-      <!-- Main component for a primary marketing message or call to action -->
-      <div class="container">
-        <h1>Grid for the Dataset <font id="FillInDataSet">...</font></h1>
-        <table id="GridTable">
-        </table>
-      </div> <!-- /container -->
-    </div> <!-- /jumbotron -->
-
-
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/lib/jquery.min.js"></script>    
-    <script src="/assets/js/lib/d3.min.js" charset="utf-8"></script>
-    <script src="/assets/js/lib/bootstrap.min.js"></script>
-    <script src="/assets/js/lib/underscore.min.js"></script>
-    <script src="/assets/js/lib/backbone.min.js"></script>
-
-    <script src="/assets/js/common.js"></script>
-    <script src="/assets/js/PGChartPoint.js"></script>
-    <script src="/assets/js/PGChart.js"></script>
-    <script src="/assets/js/PGLinesChart.js"></script>
-    <script src="/assets/js/grid.js"></script>
-  </body>
+<body>
+  {{.Navbar}}
+  <div class="jumbotron">
+    <!-- Main component for a primary marketing message or call to action -->
+    <div class="container">
+      <h1>Grid for the Dataset <font id="FillInDataSet">...</font></h1>
+      <table id="GridTable">
+      </table>
+    </div> <!-- /container -->
+  </div> <!-- /jumbotron -->
+  {{.Footer}} 
+  <script>
+    requirejs(['app/grid']);
+  </script>  
+</body>
 </html>
