--- a/public/maps.html
+++ b/public/maps.html
@@ -1,60 +1,11 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
-
-    <title>DataCon - Home</title>
-
-    <!-- Bootstrap core CSS -->
-    <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
-    <link href="/assets/css/layout.min.css" rel="stylesheet">
-
-
-    <!-- Custom styles for this template -->
-    <!-- <link href="navbar-fixed-top.css" rel="stylesheet">-->
-
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../docs-assets/assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.assets/js/1.3.0/respond.min.js"></script>
-    <![endif]-->
+    {{.Header}}
   </head>
   <body>
-
-    <!-- Fixed navbar -->
-    <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a class="navbar-brand" href="/">DataCon</a>
-        </div>
-        <div class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-          </ul>
-          <ul class="nav navbar-nav navbar-right">
-            <li class="active"><a class="online" href="#">Online</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </div>
-
+    {{.Navbar}}
     <div class="container">
-
       <!-- Main component for a primary marketing message or call to action -->
       <div class="jumbotron">
         <h1>Viewing Dataset <font id="FillInDataSet">...</font></h1>
@@ -66,7 +17,6 @@
           <a class="btn btn-lg btn-primary" href="../../components/#navbar" role="button">Add To Home &raquo;</a>
         </p>
       </div>
-
       <!-- Wikidata -->
       <div class="container wikidata">
         <h2> History </h2>
@@ -76,14 +26,12 @@
         <p>Blah blah blah people get <b>stabbed</b></p>
       </div>
     </div> <!-- /container -->
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/lib/jquery.min.js"></script>
+
+    {{.Footer}}
     <script src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
-    <script src="/assets/js/lib/bootstrap.min.js"></script>
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCtGeKRpMVbjE1LBLnA6y4TZat4D7H-GCw&sensor=false&libraries=visualization"></script>
     <script src="assets/js/GMapsTheme.js"></script>
+
     <script type="text/javascript">
       // When the window has finished loading create our google map below
       google.maps.event.addDomListener(window, 'load', init);
@@ -135,8 +83,8 @@
         heatmap.setMap(map);
       }
     </script>
-    <script type="text/javascript">
 
+    <script type="text/javascript">
       $(function() {
         var y = 1988;
         var datasets = [
@@ -147,10 +95,7 @@
         for (var i = 0; i < 18; i++) {
           datasets[0].data.push([y+i,Math.sin(i/7) + Math.random()/6]);
         };
-
-
         function plotAccordingToChoices() {
-
           if (datasets.length > 0) {
             $.plot("#placeholder", datasets, {
               yaxis: {
@@ -162,9 +107,9 @@
             });
           }
         }
-
         plotAccordingToChoices();
-      });    </script>
+      });    
+    </script>
 
   </body>
 </html>
