--- a/public/overlay.html
+++ b/public/overlay.html
@@ -1,103 +1,70 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
+  {{.Header}}
+  <link href="/css/charts.css" rel="stylesheet">
+</head>
 
-  <title>DataCon - Home</title>
-
-  <!-- Bootstrap core CSS -->
-  <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
-  <link href="/assets/css/layout.min.css" rel="stylesheet">
-  <link href="/assets/css/graphs.min.css" rel="stylesheet">
-
-
-  <!-- Custom styles for this template -->
-  <!-- <link href="navbar-fixed-top.css" rel="stylesheet">-->
-
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.assets/js/1.3.0/respond.min.js"></script>
-      <![endif]-->
-    </head>
-
-    <body>
-
-      <!-- Fixed navbar -->
-      <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <a class="navbar-brand" href="/">DataCon</a>
-          </div>
-          <div class="navbar-collapse collapse">
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#">Home</a></li>
-            </ul>
-            <ul class="nav navbar-nav navbar-right">
-              <li class="active"><a class="online" href="#">Online</a></li>
-            </ul>
-          </div><!--/.nav-collapse -->
+<body>
+  {{.Navbar}}
+  <div class="jumbotron">
+    <div class="container">
+      <h2>Viewing Dataset <font id="FillInDataSet">...</font></h2>
+      <div id='data-container' class="row">
+        <!-- Chart -->
+        <div id="chart" class="col-md-9">
+          <h2>Loading Chart ...</h2>
+          <p>Hold on.</p>
+        </div>
+        <!-- Wikidata -->
+        <div id='wikidata' class="col-md-3">
+          <h2>Loading data ...</h2>
+          <p>Hold on.</p>
         </div>
       </div>
-
-      <div id='mainContainer' class="container">
-
-        <!-- Main component for a primary marketing message or call to action -->
-        <div class="jumbotron">
-          <h1>Viewing Dataset <font id="FillInDataSet">...</font></h1>
-          <div class="demo-container">
-            <div id="placeholder" class="demo-placeholder"></div>
-            <!-- Wikidata -->
-            <div class="container wikidata">
-              <h2> Loading... </h2>
-              <p>Hold on.</p>
-            </div>
+      <div class="row">
+        <div id="selectors" class='col-xs-6'>
+          <div class="row">
+            Override X1 Axis:
+            <select id="pickx1axis" onchange="ReJigGraph()">
+              <option>Loading...</option>
+            </select>
           </div>
-
-        
-
-          Override X1 Axis:
-          <select id="pickx1axis" onchange="ReJigGraph()">
-            <option>Loading...</option>
-          </select>
-        </br>
-          Override Y1 Axis:
-          <select id="picky1axis" onchange="ReJigGraph()">
-            <option>Loading...</option>
-          </select>
-        </br>
-          Override X2 Axis:
-          <select id="pickx2axis" onchange="ReJigGraph()">
-            <option>Loading...</option>
-          </select>
-        </br>
-          Override Y2 Axis:
-          <select id="picky2axis" onchange="ReJigGraph()">
-            <option>Loading...</option>
-          </select>
+          <div class="row">
+            Override Y1 Axis:
+            <select id="picky1axis" onchange="ReJigGraph()">
+              <option>Loading...</option>
+            </select>
+          </div>
+          <div class="row">
+            Override X2 Axis:
+            <select id="pickx2axis" onchange="ReJigGraph()">
+              <option>Loading...</option>
+            </select>
+          </div>
+          <div class="row">
+            Override Y2 Axis:
+            <select id="picky2axis" onchange="ReJigGraph()">
+              <option>Loading...</option>
+            </select>
+          </div>
+          <div class="row">
+              <a class="btn btn-lg btn-primary" href="#" id="SetupOverlay" role="button">Overlay data &raquo;</a>
+          </div>
+        </div> <!-- selectors -->
+        <div id="controls" class="col-xs-6"></div>
       </div>
 
-      
-      </div> <!-- /container -->
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="/assets/js/lib/jquery.min.js"></script>
-    <script src="/assets/js/lib/d3.v3.min.js" charset="utf-8"></script>
-    <script src="/assets/js/lib/bootstrap.min.js"></script>
-    <script src="/assets/js/common.js"></script>
-    <script src="/assets/js/overlay.js"></script>
-  </body>
-  </html>
+    </div> <!-- /container -->     
+  </div> <!-- /jumbotron -->
+  {{.Footer}}
+  <script>
+    requirejs([
+      'd3',
+      'app/common'
+    ], function () {
+          requirejs(['app/overlay']);
+    });
+  </script> 
+</body>
+</html>
