--- a/public/overview.html
+++ b/public/overview.html
@@ -1,53 +1,13 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="">
-  <meta name="author" content="">
-  <link rel="shortcut icon" href="../../docs-assets/ico/favicon.png">
-
-  <title>DataCon - Overview</title>
-
-  <link href="/assets/css/lib/bootstrap.css" rel="stylesheet">
-  <link href="/assets/css/lib/dc.css" rel="stylesheet">
-  <link href="/assets/css/layout.min.css" rel="stylesheet">
-  <link href="/assets/css/charts.min.css" rel="stylesheet">
-
-  <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.assets/js/1.3.0/respond.min.js"></script>
-      <![endif]-->
+  {{.Header}}
+  <link href="/dc/dc.css" rel="stylesheet">
+  <link href="/css/charts.css" rel="stylesheet">
 </head>
 
 <body>
-
-  <!-- Fixed navbar -->
-  <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-    <div class="container">
-      <div class="navbar-header">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-          <span class="sr-only">Toggle navigation</span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
-        <a class="navbar-brand" href="/">DataCon</a>
-      </div>
-      <div class="navbar-collapse collapse">
-        <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Home</a></li>
-        </ul>
-        <ul class="nav navbar-nav navbar-right">
-          <li class="active"><a class="online" href="#">Online</a></li>
-        </ul>
-      </div><!--/.nav-collapse -->
-    </div>
-  </div>
-
+  {{.Navbar}}
   <div class="jumbotron">
     <div class="container">
       <div id='data-container' class="row">
@@ -59,19 +19,9 @@
       </div>
     </div> <!-- /container -->     
   </div> <!-- /jumbotron -->
-
-<script src="/assets/js/lib/jquery.min.js"></script>    
-<script src="/assets/js/lib/underscore.min.js"></script>   
-<script src="/assets/js/lib/bootstrap.min.js"></script>
-<script src="/assets/js/lib/d3.min.js" charset="utf-8"></script>
-<script src="/assets/js/lib/crossfilter.min.js" charset="utf-8"></script>
-<script src="/assets/js/lib/dc.min.js" charset="utf-8"></script>
-
-<script src="/assets/js/common.js"></script>
-
-<script src="/assets/js/PGOverviewCharts.js"></script>
-
-<script src="/assets/js/overview.js"></script>
-    
+{{.Footer}}
+<script>
+  requirejs(['app/overview']);
+</script>   
 </body>
 </html>
