added basic map

--- a/public/maptest.html
+++ b/public/maptest.html
@@ -2,17 +2,17 @@
 <html lang="en">
 <head>
   {{.Header}}
-  <link rel="stylesheet" href="/lib/css/openlayers/style.min.css" />
+  <link rel="stylesheet" href="/lib/openlayers/css/style.min.css" />
   <!--[if lte IE 8]>
   <link rel="stylesheet" href="/lib/css/openlayers/ie6-style.min.css" />
   <![endif]-->
-  <link rel="stylesheet" href="/lib/css/maps.css" />
+  <link rel="stylesheet" href="/css/maptest.css" />
 </head>
 <body>
   {{.Navbar}}
   <div class="jumbotron">
     <div class="container">
-      <h1>Map Test</h1>
+      <h4>Map Test</h4>
       <div id="mapContainer"></div>
     </div> <!-- /container -->
   </div> <!-- /jumbotron -->
