--- a/public/home.html
+++ b/public/home.html
@@ -18,6 +18,20 @@
     </div> <!-- /container -->
   </div> <!-- /jumbotron -->
   {{.Footer}}
+
+  <script type="text/html" id="visitedEntryTemplate">
+    <% if (data[1].length) { %>
+      <% if (data[1].length > 85) {
+        data[1] = data[1].substring(0,83) + '...';
+      } %> 
+      <div class='visitedEntry'>
+        <%- data[1] %>&nbsp;
+        <a href='/charts/<%= data[0] %>'>View &raquo;</a>&nbsp;
+        <a href='/overview/<%= data[0] %>'>Overview &raquo;</a>
+      </div>
+    <% } %>
+  </script>
+
   <script>
     requirejs(['app/home']);
   </script> 
