--- a/public/home.html
+++ b/public/home.html
@@ -27,7 +27,8 @@
       <div class='visitedEntry'>
         <%- data[1] %>&nbsp;
         <a href='/charts/<%= data[0] %>'>View &raquo;</a>&nbsp;
-        <a href='/overview/<%= data[0] %>'>Overview &raquo;</a>
+        <a href='/overview/<%= data[0] %>'>Overview &raquo;</a>&nbsp;
+        <a href='/maptest/<%= data[0] %>'>Map &raquo;</a>
       </div>
     <% } %>
   </script>
