--- a/public/maptest.html
+++ b/public/maptest.html
@@ -13,10 +13,13 @@
 <body>
   {{.Navbar}}
   <div class="jumbotron">
-    <div class="container">
+    <div class="container mapChartsContainer">
       <h4>Map Test</h4>
+      <div id="dataSourceSelector"></div>
       <div id="mapContainer"></div>
-      <div id="charts"></div>
+      <div id="mapCharts">
+        <div id="charts"></div>
+      </div>
     </div> <!-- /container -->
   </div> <!-- /jumbotron -->
   {{.Footer}}
