--- a/public/maptest.html
+++ b/public/maptest.html
@@ -6,6 +6,7 @@
   <!--[if lte IE 8]>
   <link rel="stylesheet" href="/lib/css/openlayers/ie6-style.min.css" />
   <![endif]-->
+  <link rel="stylesheet" href="/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="/css/maptest.css" />
   <link href="/dc/dc.css" rel="stylesheet">
   <link href="/css/charts.css" rel="stylesheet">
