--- a/public/search.html
+++ b/public/search.html
@@ -24,7 +24,7 @@
           <a href='/charts/<%= data.GUID %>'>View &raquo;</a>&nbsp;
           <a href='/overview/<%= data.GUID %>'>Overview &raquo;</a>&nbsp;
           <% if (data.LocationData === "true") { %>
-                <a href='/maptest/<%= data[0] %>'>Map &raquo;</a>
+                <a href='/maptest/<%= data.GUID %>'>Map &raquo;</a>
           <%  }  %>
         </td> 
       </tr>     
