--- a/public/maptest.html
+++ b/public/maptest.html
@@ -7,6 +7,8 @@
   <link rel="stylesheet" href="/lib/css/openlayers/ie6-style.min.css" />
   <![endif]-->
   <link rel="stylesheet" href="/leaflet/dist/leaflet.css" />
+  <link rel="stylesheet" href="/leaflet-search/dist/leaflet-search.min.css" />
+  <link rel="stylesheet" href="/leaflet.markercluster/dist/MarkerCluster.Default.css" />
   <link rel="stylesheet" href="/css/maptest.css" />
   <link href="/dc/dc.css" rel="stylesheet">
   <link href="/css/charts.css" rel="stylesheet">
