Force Directed chart deployed

--- a/public/charts.html
+++ b/public/charts.html
@@ -33,6 +33,7 @@
         <a class="btn btn-lg btn-warning chartSelector" chart='enclosure' href="javascript:void(0)" role="button">Enclosure Chart</a>
         <a class="btn btn-lg btn-warning chartSelector" chart='tree' href="javascript:void(0)" role="button">Tree Chart</a>
         <a class="btn btn-lg btn-warning chartSelector" chart='treemap' ref="javascript:void(0)" role="button">Treemap Chart</a>
+        <a class="btn btn-lg btn-warning chartSelector" chart='forcedirected' ref="javascript:void(0)" role="button">Force Directed Chart</a>
       </div>
       
       <div class="row">
