--- a/public/dc-search.html
+++ b/public/dc-search.html
@@ -45,6 +45,7 @@
       <div class="dc-search-input col-xs-9 col-md-offset-3">
         <input class="form-control input-sm" type="text" id="SBox" placeholder="Enter your search term">
         <a href="#" class="btn btn-primary" title='Explore'>Explore</a>
+        <div class="dc-search-results"></div>
         <a href="#" class="dc-search-advanced" title='Advanced Search'>Advanced Search</a>
       </div>
       
