--- a/public/overview.html
+++ b/public/overview.html
@@ -1,27 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  {{.Header}}
-  <link href="/dc/dc.css" rel="stylesheet">
-  <link href="/css/charts.css" rel="stylesheet">
+    {{.Header}}
+    <link href="/dc/dc.css" rel="stylesheet">
+    <link href="/css/charts.css" rel="stylesheet">
 </head>
 
 <body>
-  {{.Navbar}}
-  <div class="jumbotron">
-    <div class="container">
-      <div id='data-container' class="row">
-        <!-- Chart -->
-        <div id="charts">
-          <h2>Loading Charts .......</h2>
-          <p>Hold on.</p>
+    {{.Navbar}}
+    <div class="jumbotron">
+        <div class="container">
+            <div id='data-container' class="row">
+                <!-- Chart -->
+                <div id="charts">
+                    <h2>Loading Charts .......</h2>
+                    <p>Hold on.</p>
+                </div>
+            </div>
         </div>
-      </div>
-    </div> <!-- /container -->     
-  </div> <!-- /jumbotron -->
-{{.Footer}}
-<script>
-  requirejs(['app/overview']);
-</script>   
+        <!-- /container -->
+    </div>
+    <!-- /jumbotron -->
+    {{.Footer}}
+    <script>
+    requirejs(['app/overview']);
+    </script>
 </body>
+
 </html>
